<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/loginBtnTopFragSignup"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/shape_top_btn"
            android:text="LOGIN" />

        <Button
            android:id="@+id/signUpBtnTopFragSignup"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/shape_top_btn"
            android:text="SIGN UP" />
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_signUp"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        android:background="@color/white"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/createacctext"
            android:textColor="#F30D0D"
            android:textStyle="bold"
            android:textSize="30dp"/>
        <TextView
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameTVsignUp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>
        <LinearLayout
            android:layout_marginTop="120dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nameETSignUp"
                android:layout_marginLeft="20dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/nameHintSignUp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="180dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailTVSignInSignUp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>
        <LinearLayout
            android:layout_marginTop="200dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/emailETSignUp"
                android:layout_marginLeft="20dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/emailHintLoginSignUp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:text="@string/contactNo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:orientation="horizontal">
            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/phoneETSignup"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:inputType="number"
                android:hint="@string/contactNo"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="350dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordTVSignin"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>
        <LinearLayout
            android:layout_marginTop="370dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passwordETSignUp"
                android:layout_marginLeft="20dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/passwordHintLogin"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="420dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/tandcCheck"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_with"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/tAndC"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="460dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/already_have_acc"/>
            <TextView
                android:id="@+id/signInTextCAFrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textColor="#F30D0D"
                android:text="@string/signInReg"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/registerBtnSignUp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="520dp"
        android:backgroundTint="#F30D0D"
        android:text="Register"
        android:background="@drawable/shape_bottom_btn"
        app:layout_constraintTop_toTopOf="@+id/cardView_signUp"
        tools:layout_editor_absoluteX="26dp" />
</androidx.constraintlayout.widget.ConstraintLayout>