<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/loginBtnTopFragLogin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/shape_top_btn"
            android:text="LOGIN" />

        <Button
            android:id="@+id/signUpBtnTopFragLogin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="#F30D0D"
            android:layout_weight="1"
            android:background="@drawable/shape_top_btn"
            android:text="SIGN UP" />
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_signIn"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@color/white"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/signintext"
            android:textColor="#F30D0D"
            android:textStyle="bold"
            android:textSize="30dp"/>
        <TextView
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailTVSignInSignUp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>
        <LinearLayout
            android:layout_marginTop="120dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/emailEditTextLogin"
                android:layout_marginLeft="20dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/emailHintLoginSignUp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordTVSignin"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>
        <LinearLayout
            android:layout_marginTop="220dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passwordETLogin"
                android:layout_marginLeft="20dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/passwordHintLogin"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/forgotPassTVLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:layout_marginLeft="200dp"
            android:text="@string/forgotpasswordTV"
            android:textColor="#F30D0D"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginOptions"
            android:layout_marginTop="310dp"
            android:textSize="18dp"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="355dp">
            <ImageView
                android:id="@+id/google_image"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/google"
                android:layout_marginLeft="130dp"/>
            <ImageView
                android:id="@+id/fb_login"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/facebook"
                android:layout_marginLeft="55dp"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerOptOnLogin"
            android:layout_marginTop="400dp"
            android:layout_marginLeft="70dp"/>
        <TextView
            android:id="@+id/registerTVlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerLogin"
            android:layout_marginTop="400dp"
            android:layout_marginLeft="225dp"
            android:textColor="#F30D0D"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/loginBtnBottom"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="517dp"
        android:backgroundTint="#F30D0D"
        android:text="Login"
        android:background="@drawable/shape_bottom_btn"
        app:layout_constraintTop_toTopOf="@+id/cardView_signIn"
        tools:layout_editor_absoluteX="26dp" />
</androidx.constraintlayout.widget.ConstraintLayout>